--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node ./src/index.js",
+    "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,12 +14,14 @@
     "bcrypt": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.4",
     "env2": "^2.2.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "jsonwebtoken": "^8.5.0",
+    "multer": "^1.4.1",
     "pg": "^7.8.2",
     "serve-favicon": "^2.5.0"
   },
